# RelatIA

./: .env  .flake8  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: main.yml
analyzer/: forms.py  models.py  urls.py  views.py
analyzer/ai_agents/: agents.py  crew_config.py  tasks.py
analyzer/migrations/: 0001_initial.py
analyzer/tests/: __init__.py  test_agents.py  test_file_upload.py  test_mock_agents.py
docs/: architecture.md  challenges.md  installation.md
relatia/: asgi.py  settings.py  urls.py  wsgi.py
templates/analyzer/: base.html  confirm_delete.html  home.html  raw_report.html  report.html  report_list.html  upload.html
tests/: test_file_upload.py
