[tool.poetry]
name = "relatia"
version = "0.1.0"
description = "AI-powered file analyzer using Crew AI agents"
authors = ["Sebastian Nascimento <youremail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
django = "^5.0.0"
crewai = "^0.28.0"
langchain = "^0.1.0"
ollama = "^0.1.6"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
django-bootstrap5 = "^23.3"
pypdf2 = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.2"
black = "^23.7.0"
flake8 = "^6.0.0" 
autoflake = "^2.3.1"
bandit = "^1.7.5" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "relatia.settings"
python_files = "test_*.py"